--- a/src/home/myprofile/myprofile.css
+++ b/src/home/myprofile/myprofile.css
@@ -2,6 +2,8 @@
   margin: 0 auto;
   padding: 20px;
   max-width: 100%;
+  background-color: #000000;
+  height: 100vh;
 }
 
 .header-edit-profile {
@@ -45,7 +47,14 @@
   object-fit: cover;
   border: 2px solid #dbdbdb;
 }
-
+.btn-myporfile-main-div {
+  background-color: #000000;
+  border: 1px solid #333;
+  color: white;
+  border-radius: 9px;
+  padding: 12px 15px;
+  margin-left: 10px;
+}
 .profile-details {
   margin-left: 30px;
   width: 300px;
@@ -59,7 +68,7 @@
 .profile-details p {
   margin: 5px 0;
   font-size: 16px;
-  color: #262626;
+  color: #ffffff;
 }
 
 .shops {
@@ -67,9 +76,9 @@
   text-align: center;
   border: 1px solid #dbdbdb;
   border-radius: 12px;
-  background-color: #fff;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   width: 100%;
+  color: white;
 }
 
 .shop-list {
