--- a/src/home/mainpage/template1/template1.css
+++ b/src/home/mainpage/template1/template1.css
@@ -8,10 +8,11 @@
   
   .shop-card {
     border: 1px solid #ccc;
-    background-color: #fff;
+    background-color: #000000;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     width: 300px;
+    color: white;
     max-width: 100%;
     display: flex;
     flex-direction: column;
@@ -39,13 +40,13 @@
   .shop-name {
     font-weight: bold;
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
     margin-bottom: 5px;
     font-size: 1.2rem;
   }
   
   .shop-owner {
-    color: #555;
+    color: #ffffff;
     font-size: 0.9rem;
   }
   
@@ -60,13 +61,14 @@
     display: flex;
     justify-content: flex-end;
     padding: 10px;
-    background-color: #f2f2f2;
+    background-color: #000000;
     border-top: 1px solid #ddd;
+    color: white;
   }
   
   .follow-button {
-    background-color: #0095f6;
-    color: #fff;
+    background-color: hsl(0, 0%, 100%);
+    color: #000000;
     border: none;
     border-radius: 5px;
     padding: 5px 15px;
@@ -75,15 +77,17 @@
   }
   
   .follow-button.following {
-    background-color: #ccc;
+    background-color: #000000;
+    color: white;
   }
   
   .shop-footer {
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    background-color: #fff;
+    background-color: #000000;
     border-top: 1px solid #ddd;
+    color: white;
   }
   
   .star-icon {
@@ -102,11 +106,12 @@
   
   .shop-card {
     border: 1px solid #ccc;
-    background-color: #fff;
+    background-color: #000000;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     width: 300px;
     max-width: 100%;
+    color: white;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -133,13 +138,13 @@
   .shop-name {
     font-weight: bold;
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
     margin-bottom: 5px;
     font-size: 1.2rem;
   }
   
   .shop-owner {
-    color: #555;
+    color: #ffffff;
     font-size: 0.9rem;
   }
   
@@ -154,13 +159,14 @@
     display: flex;
     justify-content: flex-end;
     padding: 10px;
-    background-color: #f2f2f2;
+    background-color: #000000;
+    color: white;
     border-top: 1px solid #ddd;
   }
   
   .follow-button {
-    background-color: #0095f6;
-    color: #fff;
+    background-color: #fdfdfd;
+    color: #1f0000;
     border: none;
     border-radius: 5px;
     padding: 5px 15px;
@@ -169,15 +175,17 @@
   }
   
   .follow-button.following {
-    background-color: #ccc;
+    background-color: #000000;
+    color: white;
   }
   
   .shop-footer {
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    background-color: #fff;
+    background-color: #000000;
     border-top: 1px solid #ddd;
+    color: white;
   }
   
   .star-icon {
@@ -196,12 +204,13 @@
   
   .shop-card {
     border: 1px solid #ccc;
-    background-color: #fff;
+    background-color: #000000;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     width: 300px;
     max-width: 100%;
     display: flex;
+    color: white;
     flex-direction: column;
     overflow: hidden;
   }
@@ -227,13 +236,13 @@
   .shop-name {
     font-weight: bold;
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
     margin-bottom: 5px;
     font-size: 1.2rem;
   }
   
   .shop-owner {
-    color: #555;
+    color: #ffffff;
     font-size: 0.9rem;
   }
   
@@ -248,13 +257,14 @@
     display: flex;
     justify-content: flex-end;
     padding: 10px;
-    background-color: #f2f2f2;
+    background-color: #000000;
     border-top: 1px solid #ddd;
+    color: white;
   }
   
   .follow-button {
-    background-color: #0095f6;
-    color: #fff;
+    background-color: #ffffff;
+    color: #000000;
     border: none;
     border-radius: 5px;
     padding: 5px 15px;
@@ -263,15 +273,17 @@
   }
   
   .follow-button.following {
-    background-color: #ccc;
+    background-color: #000000;
+    color: white;
   }
   
   .shop-footer {
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    background-color: #fff;
+    background-color: #000000;
     border-top: 1px solid #ddd;
+    color: white;
   }
   
   .star-icon {
