--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -332,6 +332,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      background-color: black;
     }
     
     .dropmentmainheader {
