--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -93,27 +93,17 @@
   .blinkfeed-btn-main-pg button:hover {
     background-color: transparent;
     color: #ffffff;
-    border: 2px solid #6184D8;
+    border: 2px solid #000000;
     transition: 0.3s;
   }
-  .add-shop-btn-main-page-dropment button {
-    color: white;
-    background-color: #6184D8;
-    border: 2px solid #6184D8;
-    border-radius: 9px;
-    padding: 10px 20px;
-    margin-left: 100px;
-    align-items: center;
-  }
-  
   
   }
   
   @media (min-width: 481px) and (max-width: 768px) {
     .blinkfeed-btn-main-pg button {
-      background-color: #6184D8;
-      color: white;
-      border: 2px solid #6184D8;
+      background-color: #f0f0f0;
+      color: rgb(0, 0, 0);
+      border: 2px solid #fdfdfd;
       border-radius: 25px;
       padding: 10px 20px;
       margin-top: 10px;
@@ -126,8 +116,8 @@
     }
     .blinkfeed-btn-main-pg button:hover {
       background-color: transparent;
-      color: #6184D8;
-      border: 2px solid #6184D8;
+      color: #ffffff;
+      border: 2px solid #ffffff;
       transition: 0.3s;
     }
     .add-shop-btn-main-page-dropment button {
@@ -463,3 +453,12 @@
     }
     
   }
+body {
+  background-color: black;
+}
+p{
+  color: white;
+}
+h1, h2, h3, h4 {
+  color: white;
+}
