--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -431,9 +431,9 @@
     
     /* Button styles for main page */
     .blinkfeed-btn-main-pg button {
-      background-color: #000000;
-      color: white;
-      border: 2px solid #000000;
+      background-color: #ffffff;
+      color: rgb(14, 0, 0);
+      border: 2px solid #fcfcfc;
       border-radius: 25px;
       padding: 10px 20px;
       margin-top: 10px;
