--- a/src/home/chat/chat.css
+++ b/src/home/chat/chat.css
@@ -54,7 +54,6 @@
   padding: 10px;
   margin-right: 10px; /* Adjust the right margin */
   border-radius: 8px;
-  background-color: #f5f5f5;
   margin-top: 10px;
   max-width: 70%; /* Adjust as needed */
   width: 400px;
@@ -73,6 +72,9 @@
   text-align: left; /* Align text to the left within the message */
   max-width: 70%; /* Adjust as needed */
   width: 400px;
+}
+.textchatofusers {
+  color: black;
 }
 
 .textchatofusers {
