--- a/src/home/mainpage/template1/template1.css
+++ b/src/home/mainpage/template1/template1.css
@@ -79,6 +79,7 @@
   .follow-button.following {
     background-color: #000000;
     color: white;
+    border: 1px solid white;
   }
   
   .shop-footer {
@@ -179,6 +180,7 @@
   .follow-button.following {
     background-color: #000000;
     color: white;
+    border: 1px solid white;
   }
   
   .shop-footer {
@@ -279,6 +281,7 @@
   .follow-button.following {
     background-color: #000000;
     color: white;
+    border: 1px solid white;
   }
   
   .shop-footer {
@@ -384,6 +387,7 @@
       .follow-button.following {
         background-color: #000000;
         color: white;
+        border: 1px solid white;
       }
       
       .shop-footer {
