--- a/src/home/addnewshop/addshop.css
+++ b/src/home/addnewshop/addshop.css
@@ -1,40 +1,31 @@
-.nicheheaderbtn button {
-    background-color: transparent;
-    border: 1px solid grey;
-    color: white;
-    padding: 12px 16px;
-    border-radius: 9px;
-    margin: 0px 10px;
-    cursor: pointer;
-}
-.templates {
+.niches {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 100px;
-    align-items: center;
-  }
-  
-  .template {
-    margin: 10px;
-    text-align: center;
-  }
-  .button-button-primary-template-button {
-    background-color: white;
-    color: black;
-    padding: 8px 80px;
-    border-radius: 9px;
-    cursor: pointer;
-    border: 2px solid white;
-  }
-  .button-button-secondary-preview-button {
-    padding: 8px 30px;
-    color: white;
-    border: 2px solid white;
-    cursor: pointer;
-    border-radius: 9px;
-    margin-top: 10px;
-    background-color: transparent;
+    flex-wrap: wrap; /* Allow for responsive layout */
+    justify-content: center; /* Center align horizontally */
+    align-items: center; /* Center align vertically */
+    height: 100vh; /* Ensures full viewport height */
+    background-color: black; /* Set the background to black */
+    padding: 20px; /* Add some padding to the container */
+    text-align: center; /* Center-align text content */
   }
 
-  
+  .button-button-primary-template-button {
+    background-color: #14181d;
+    color: white;
+    border: 2px solid #14181d;
+    padding: 12px 20px;
+    width: 300px;
+    border-radius: 9px;
+    margin-top: 9px;
+    cursor: pointer;
+  }
+
+  .button-button-secondary-preview-button {
+    border: 2px solid #14181d;
+    color: white;
+    background-color: transparent;
+    border-radius: 9px;
+    padding: 12px 20px;
+    width: 200px;
+    margin-top: 9px;
+  }
