--- a/src/home/addnewshop/addshop.css
+++ b/src/home/addnewshop/addshop.css
@@ -20,6 +20,20 @@
     cursor: pointer;
   }
 
+  .button-button-primary-template-button-custom {
+    background-color: #14181d;
+    color: white;
+    border: 2px solid #14181d;
+    padding: 12px 20px;
+    width: 300px;
+    border-radius: 9px;
+    margin-bottom: 40px;
+    cursor: pointer;
+  }
+  .template {
+    margin-bottom: 30px;
+  }
+
   .button-button-secondary-preview-button {
     border: 2px solid #14181d;
     color: white;
